--- a/style.css
+++ b/style.css
@@ -84,16 +84,22 @@ height: 100px;
 }
 
 .insta {
-    background-color: purple;
     color: darkorange;
     font-size: xx-large;
     font-family: "Oleo Script", system-ui;
     margin-right: 30px;
 }
 .whats {
-    background-color: green;
     color: blanchedalmond;
     font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
+    margin-left: 30px;
+}
+.insta1 {
+    background-color: purple;
+    margin-right: 30px;
+}
+.whats1 {
+    background-color: green;
     margin-left: 30px;
 }
