--- a/style.css
+++ b/style.css
@@ -97,9 +97,15 @@ height: 100px;
 }
 .insta1 {
     background-color: purple;
+    color: darkorange;
+    font-size: xx-large;
+    font-family: "Oleo Script", system-ui;
     margin-right: 30px;
 }
-.whats1 {
+.whats2 {
     background-color: green;
+      color: blanchedalmond;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
     margin-left: 30px;
 }
